@@ -1442,13 +1442,10 @@ elif "depclean"==myaction:
 
 	if not syslist:
 		print "!!! You have no system list. Cannot determine system from world."
-
 	if not worldlist:
 		print "!!! You have no world file. Cannot determine explicit merges."
-
 	if not myvarlist:
 		print "!!! You have no /var/db tree. This is a problem."
-
 	if not alldeps:
 		print "!!! You have no dependancies. Impossible. Bug."
 
